# gemma-4

./: .gitignore  README.md  context.md  pyproject.toml  requirements.txt
docs/: distillation_reasoning_trace.md  stack_2026_validated.md
launch/: arc_drone_gazebo_px4.launch.py
legacy/end_to_end_vlm/: auair_eval.py  benchmark_auair.py  cache_teacher_targets.py  distill_trm_student.py  finetune_gemma_auair.py  parse_auair.py  student_distillation.py  student_training.py  (+2 more)
scripts/: annotate_auair.py  annotate_visdrone.py  benchmark_auair.py  build_sar_dataset.py  demo.py  demo_hierarchical_control.py  distill_trm_student.py  evaluate_sar_triage.py  finetune_gemma_auair.py  finetune_gemma_teacher.py  finetune_gemma_teacher_moe.py  finetune_sar_mastermind.py  finetune_unsloth.py  parse_auair.py  run_arc_drone_bench.py  run_gpu_smoke.py  run_gpu_smoke.sh  run_isaac_mission.py  sweep_gemma_layers.py  train_trm_student.py  validate_gazebo_mission_world.py
tests/: test_arc_drone_bench.py  test_auair_args.py  test_auair_logic.py  test_benchmark_export.py  test_benchmark_metrics_topic.py  test_bringup.py  test_cli_args.py  test_cloud_gpu.py  test_control_events.py  test_gazebo_px4_adapter.py  test_gemma_layer_sweep.py  test_image_loading.py  test_live_benchmark.py  test_live_validation.py  test_mission_targets.py  test_model.py  test_model_patch.py  test_pipeline_vision.py  test_stack_profiles.py  test_student_distillation.py  test_student_training.py  test_supervision.py  test_teacher_finetuning.py  test_teacher_finetuning_moe.py  test_vlm_video_reasoning.py
(+48 files in other folders)
